--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node shimapan.js"
   },
+  "engines": { "node": "8.4.0" },
   "repository": {
     "type": "git",
     "url": "https://github.com/Madobe/shimapan_node.git"
