Add announcements_channel to assignable settings

--- a/config/config.js.template
+++ b/config/config.js.template
@@ -10,7 +10,8 @@ const config = {
     "punish_role",
     "serverlog_channel",
     "absence_channel",
-    "modlog_channel"
+    "modlog_channel",
+    "announcements_channel"
   ],
 
   permLevels: [
